Update Welcome Page
Uploading a test Welcome Page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 
 <head>
     <title>Welcome! :)</title>
+    <link rel="stylesheet" href="css/main_page.css">
 
 </head>
 
 <body>
-    <p>Hello Testing</p>
-
+    <div class="bg">
+        <div class="message">Welcome!</div>
+        <div class="options">
+            <ul>
+                <a href="projects/pathfinder-vizualizer/pathfinder_vizualizer.html">Pathfinding Visualizer</a>
+                <a href="https://github.com/chungheon-public-projects">Github Profile</a>
+            </ul>
+        </div>
+    </div>
 </body>
 
 
