Update Pathfinder Vizualizer
Add legend for pathfinder vizualizer

--- a/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
+++ b/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
@@ -39,7 +39,14 @@
             <h4 id='weighttoggle' onclick="toggleWeight()">Toggle Weight :ON</h4>
         </ul>
     </div>
-    <div class='legend'></div>
+    <div class='legend'>
+        <ul>
+            <div style="background-image: url('Icons/legend-start.png');">Start Icon</div>
+            <div style="background-image: url('Icons/legend-end.png');">End Icon</div>
+            <div style="background-image: url('Icons/legend-weight.png');">Weight Icon</div>
+            <div style="background-image: url('Icons/legend-wall.png');">Wall Icon</div>
+        </ul>
+    </div>
     <div id="grid">
     </div>
 </body>
