--- a/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
+++ b/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
@@ -41,10 +41,10 @@
     </div>
     <div class='legend'>
         <ul>
-            <div style="background-image: url('Icons/legend-start.png');">Start Icon</div>
-            <div style="background-image: url('Icons/legend-end.png');">End Icon</div>
-            <div style="background-image: url('Icons/legend-weight.png');">Weight Icon</div>
-            <div style="background-image: url('Icons/legend-wall.png');">Wall Icon</div>
+            <div style="background-image: url('./Icons/legend-start.png');">Start Icon</div>
+            <div style="background-image: url('./Icons/legend-end.png');">End Icon</div>
+            <div style="background-image: url('./Icons/legend-weight.png');">Weight Icon</div>
+            <div style="background-image: url('./Icons/legend-wall.png');">Wall Icon</div>
         </ul>
     </div>
     <div id="grid">
