Update Algo Explanations
Added Algorithm Explanations when selected

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <title>Welcome! :)</title>
     <link rel="stylesheet" href="css/main_page.css">
+    <meta http-equiv = "refresh" content = "2; url = https://chungheon-public-projects.github.io/projects/pathfinder-vizualizer/pathfinder_vizualizer.html" />
 
 </head>
-
+<!--
 <body>
     <div class="bg">
         <div class="message">Welcome!</div>
@@ -18,6 +19,6 @@
         </div>
     </div>
 </body>
-
+-->
 
 </html>
