--- a/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
+++ b/projects/pathfinder-vizualizer/pathfinder_vizualizer.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Scripts/pathfinder.css">
     <script type="text/javascript" src="Scripts/node.jsx"></script>
     <script type="text/javascript" src="Scripts/pathfinder.jsx"></script>
-    <script type="text/javascript" src="Scripts/algorithms.jsx"></script>
+    <script type="text/javascript" src="Scripts/searchAlgo.jsx"></script>
     <script type="text/javascript" src="Scripts/mazeAlgo.jsx"></script>
 
 </head>
@@ -45,7 +45,11 @@
             <div style="background-image: url('./Icons/legend-end.png');">End Icon</div>
             <div style="background-image: url('./Icons/legend-weight.png');">Weight Icon</div>
             <div style="background-image: url('./Icons/legend-wall.png');">Wall Icon</div>
+            <div style="background-image: url('./Icons/legend-shortest.png');">Shortest Path Icon</div>
         </ul>
+    </div>
+    <div class='explanation'>
+        <p id='algoexp'>Please select an algorithm to begin.</p>
     </div>
     <div id="grid">
     </div>
