Image container hover
Highlighted when hover over "project" container

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main_page.css">
     <link rel="stylesheet" href="css/anim.css">
     <script type="text/javascript" src="./main.js"></script>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -36,12 +36,21 @@
             <div id="projects">
                 <div class="project_list">
                     <div class="project_container" style="margin-right: 10%">
+                        <div class="overlay">
+                            <div class="project_text">
+                                Pathfinder
+                            </div>
+                        </div>
                         <img class="image" src="./resources/Pathfinder.png" alt="pathfinder">
-                        <div class="overlay"></div>
                     </div>
                     <div class="project_container" style="margin-right: 10%">
+                        <div class="overlay">
+                            <div class="project_text">
+                                Sudoku Game
+                            </div>
+                        </div>
                         <img class="image" src="./resources/Pathfinder.png" alt="pathfinder">
-                        <div class="overlay"></div>
+
                     </div>
                 </div>
             </div>
