Update Projects Content
Update CSS for Projects Content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="navigation" style="z-index: 4;">
             <div id="navbar">
                 <ul>
-                    <li class="path">RESUME</li>
+                    <li class="path">Resume</li>
                     <li class="path">Public Projects</li>
                     <li class="path">Android Projects</li>
                 </ul>
@@ -28,29 +28,45 @@
                 <div class="abcontainer" style="z-index: 3;">
                     <div id="msg">DEVELOPER.</div>
                     <div class="contacts">
-                        <div class="contact" style="margin-left: 20px;">RESUME</div>
-                        <div class="contact" style="margin-left: 20px;" );">CONTACT</div>
+                        <a class="contact" href="https://github.com/chungheon-public-projects">
+                            RESUME
+                        </a>
+                        <a class="contact" style="margin-left: 20px;"
+                            href="https://github.com/chungheon-public-projects">CONTACT</a>
                     </div>
                 </div>
             </div>
             <div id="projects">
                 <div class="project_list">
-                    <div class="project_container" style="margin-right: 10%">
+                    <div class="container">
+                        <img src="../chungheon-public-projects.github.io/resources/Pathfinder.png" alt="Pathfinder"
+                            class="image">
                         <div class="overlay">
-                            <div class="project_text">
-                                Pathfinder
-                            </div>
+                            <a href="./projects/pathfinder-vizualizer/pathfinder_vizualizer.html" class="icon" title="Pathfinder Visualizer">
+                                <i class="project-obj">(Javascript/HTML/CSS)</i>
+                                <i class="project-title">Pathfinder Visualizer</i>
+                            </a>
                         </div>
-                        <img class="image" src="./resources/Pathfinder.png" alt="pathfinder">
                     </div>
-                    <div class="project_container" style="margin-right: 10%">
+                    <div class="container">
+                        <img src="../chungheon-public-projects.github.io/resources/Sudoku.png" alt="Sudoku"
+                            class="image">
                         <div class="overlay">
-                            <div class="project_text">
-                                Sudoku Game
-                            </div>
+                            <a href="./projects/Sudoku/sudoku.html" class="icon" title="Sudoku Puzzle">
+                                <i class="project-obj">(Javascript/HTML/CSS)</i>
+                                <i class="project-title">Sudoku Puzzle</i>
+                            </a>
                         </div>
-                        <img class="image" src="./resources/Pathfinder.png" alt="pathfinder">
-
+                    </div>
+                    <div class="container">
+                        <img src="../chungheon-public-projects.github.io/resources/empty.png" alt="Others"
+                            class="image">
+                        <div class="overlay">
+                            <a href="#" class="icon" title="Others">
+                                <i class="project-obj">Coming Soon.</i>
+                                <i class="project-title">More Projects</i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
