--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="navbar">
                 <ul>
                     <li class="path">Resume</li>
-                    <li class="path">Public Projects</li>
+                    <li class="path">Web Projects</li>
                     <li class="path">Android Projects</li>
                 </ul>
             </div>
@@ -37,34 +37,34 @@
                 </div>
             </div>
             <div id="projects">
-                <div class="project_list">
-                    <div class="container">
+                <div class="prj-list">
+                    <div class="prj-container">
                         <img src="../chungheon-public-projects.github.io/resources/Pathfinder.png" alt="Pathfinder"
-                            class="image">
-                        <div class="overlay">
-                            <a href="./projects/pathfinder-vizualizer/pathfinder_vizualizer.html" class="icon" title="Pathfinder Visualizer">
-                                <i class="project-obj">(Javascript/HTML/CSS)</i>
-                                <i class="project-title">Pathfinder Visualizer</i>
+                            class="prj-image">
+                        <div class="prj-overlay">
+                            <a href="./projects/pathfinder-vizualizer/pathfinder_vizualizer.html" class="prj-text" title="Pathfinder Visualizer">
+                                <i class="prj-obj">(Javascript/HTML/CSS)</i>
+                                <i class="prj-title">Pathfinder Visualizer</i>
                             </a>
                         </div>
                     </div>
-                    <div class="container">
+                    <div class="prj-container">
                         <img src="../chungheon-public-projects.github.io/resources/Sudoku.png" alt="Sudoku"
-                            class="image">
-                        <div class="overlay">
-                            <a href="./projects/Sudoku/sudoku.html" class="icon" title="Sudoku Puzzle">
-                                <i class="project-obj">(Javascript/HTML/CSS)</i>
-                                <i class="project-title">Sudoku Puzzle</i>
+                            class="prj-image">
+                        <div class="prj-overlay">
+                            <a href="./projects/Sudoku/sudoku.html" class="prj-text" title="Sudoku Puzzle">
+                                <i class="prj-obj">(Javascript/HTML/CSS)</i>
+                                <i class="prj-title">Sudoku Puzzle</i>
                             </a>
                         </div>
                     </div>
-                    <div class="container">
+                    <div class="prj-container">
                         <img src="../chungheon-public-projects.github.io/resources/empty.png" alt="Others"
-                            class="image">
-                        <div class="overlay">
-                            <a href="#" class="icon" title="Others">
-                                <i class="project-obj">Coming Soon.</i>
-                                <i class="project-title">More Projects</i>
+                            class="prj-image">
+                        <div class="prj-overlay">
+                            <a href="#" class="prj-text" title="Others">
+                                <i class="prj-obj">Coming Soon.</i>
+                                <i class="prj-title">More Projects</i>
                             </a>
                         </div>
                     </div>
