--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="./main.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Refresh" content="0; url=./temp.html" />
 
 </head>
 
