Update generate puzzle algorithm
Incorporate animation of the generation. Add a alert when a algorithm finishes running

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div id="navigation" style="z-index: 4;">
             <div id="navbar">
                 <ul>
-                    <li class="path">Resume</li>
-                    <li class="path">Web Projects</li>
-                    <li class="path">Android Projects</li>
+                    <li class="path"><a class="contact" href="./resources/TingXian_Loo_Resume.docx".download>
+                        RESUME
+                    </a></li>
+                    <li class="path" onclick="scrollToWeb()">Web Projects</li>
                 </ul>
             </div>
 
@@ -28,7 +29,7 @@
                 <div class="abcontainer" style="z-index: 3;">
                     <div id="msg">DEVELOPER.</div>
                     <div class="contacts">
-                        <a class="contact" href="https://github.com/chungheon-public-projects">
+                        <a class="contact" href="./resources/TingXian_Loo_Resume.docx".download>
                             RESUME
                         </a>
                         <a class="contact" style="margin-left: 20px;"
@@ -62,21 +63,19 @@
                         <img src="../chungheon-public-projects.github.io/resources/empty.png" alt="Others"
                             class="prj-image">
                         <div class="prj-overlay">
-                            <a href="#" class="prj-text" title="Others">
                                 <i class="prj-obj">Coming Soon.</i>
                                 <i class="prj-title">More Projects</i>
-                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="android">
+            <!--<div id="android">
 
-            </div>
+            </div>-->
         </div>
-        <div id="contactinfo">
+        <!--<div id="contactinfo">
 
-        </div>
+        </div>-->
     </div>
 </body>
 
